--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>com.google.http-client</groupId>
             <artifactId>google-http-client</artifactId>
-            <version>1.21.0-SNAPSHOT</version>
+            <version>1.22.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>com.google.http-client</groupId>
             <artifactId>google-http-client-jackson2</artifactId>
-            <version>1.21.0-SNAPSHOT</version>
+            <version>1.22.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.collections</groupId>
